Gil temperature implemented, but not prepared to work with physiotime method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,10 @@ S3method(summary,physiodata)
 S3method(summary,physiotime)
 export(bradford)
 export(bradtheta)
+export(cardinals)
+export(gaussfit)
+export(huidobro)
+export(maximizeR2)
 export(physiodata)
 export(physiotime)
 import(data.table)
