--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,15 @@
 
 S3method(barplot,physiodata)
 S3method(plot,bradford)
+S3method(plot,huidobro)
 S3method(plot,physiodata)
 S3method(plot,physiotime)
 S3method(print,bradford)
+S3method(print,huidobro)
 S3method(print,physiodata)
 S3method(print,physiotime)
 S3method(summary,bradford)
+S3method(summary,huidobro)
 S3method(summary,physiodata)
 S3method(summary,physiotime)
 export(bradford)
@@ -18,4 +21,5 @@ export(huidobro)
 export(maximizeR2)
 export(physiodata)
 export(physiotime)
+import(binom)
 import(data.table)
