--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,25 +1,35 @@
 Package: seedr
 Type: Package
 Title: Hydro and Thermal Time Seed Germination Models in R
-Version: 0.1.0.9006
-Date: 2020-10-23
+Version: 0.2.0
+Date: 2020-10-25
 Authors@R: c(
-    person("Fernández-Pascual", "Eduardo", email = "efernandezpascual@gmail.com", 
+    person("Fernández-Pascual", "Eduardo", 
+    comment = c(ORCID = "0000-0002-4743-9577"),
+    email = "efernandezpascual@gmail.com", 
       role = c("cre", "aut")),
-    person("González-Rodríguez", "Gil", email = "gil@uniovi.es", role = "aut"),
-    person("Ladouceur", "Emma", email = "emmala@gmail.com", role = "ctb"))
-Maintainer: Eduardo Fernández-Pascual <efernandezpascual@gmail.com>
+    person("González-Rodríguez", "Gil", 
+    comment = c(ORCID = "0000-0002-2532-8665"), 
+    email = "gil@uniovi.es", 
+    role = "aut"),
+    person("Ladouceur", "Emma",
+    comment = c(ORCID = "0000-0002-4943-4358"), 
+    email = "emmala@gmail.com", 
+    role = "ctb"))
+Maintainer:  Fernández-Pascual, Eduardo <efernandezpascual@gmail.com>
 Description: Analysis of seed germination data
     using the physiological time modelling approach. Includes functions
     to fit hydrotime and thermal-time models with the traditional approaches
-    of Bradford and Garcia-Huidobro. Allows to fit models to grouped datasets,
+    of Bradford (1990) <doi:10.1104/pp.94.2.840> devtoo
+    and Garcia-Huidobro (1982) <doi:10.1093/jxb/33.2.288>. 
+    Allows to fit models to grouped datasets,
     i.e. datasets containing multiple species, seedlots or experiments.
 URL: http://github.com/efernandezpascual/seedr
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
-Depends: R (>= 2.10)
+Depends: R (>= 3.5.0)
 Imports:
     data.table,
     binom,
